--- a/project-two/index.html
+++ b/project-two/index.html
@@ -9,6 +9,6 @@
 <body>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script> HAT
+    <script src="js/main.js"></script>
 </body>
 </html>
